why it too long to commit and push

--- a/northern-circuit.html
+++ b/northern-circuit.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="classic-footer-col classic-footer-booking">
-        <form class="classic-footer-form" id="booking-form" action="https://formsubmit.co/info@lengasafaris.com" method="POST">
+        <form class="classic-footer-form" id="booking-form" action="https://formsubmit.co/ericgasper1721@gmail.com" method="POST">
           <input type="text" name="name" placeholder="Name" required>
           <input type="email" name="email" placeholder="Email" required>
           <input type="text" name="phone" placeholder="Phone" required>
