Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Lenga Safari Adventures</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="icon" type="image/png" href="images/favicon.ico" />
 </head>
 <body>
   <div class="navbar minimalist-navbar">
@@ -324,7 +325,7 @@
           <img src="images/visa-classic-svgrepo-com.svg" alt="Visa" title="Visa">
           <img src="images/mastercard-full-svgrepo-com.svg" alt="Mastercard" title="Mastercard">
           <img src="images/mpesa-logo.svg" alt="Mpesa" title="Mpesa">
-          <img src="images/airtel.svg" alt="Airtel Money" title="Airtel Money">
+          <img src="images/airtel-logo-icon.svg" alt="Airtel Money" title="Airtel Money">
         </div>
         <div class="classic-footer-note">We accept Visa, Mastercard, and major Tanzanian mobile payments.</div>
       </form>
