--- a/northern-circuit.html
+++ b/northern-circuit.html
@@ -104,7 +104,7 @@
             <img src="images/visa-classic-svgrepo-com.svg" alt="Visa" title="Visa">
             <img src="images/mastercard-full-svgrepo-com.svg" alt="Mastercard" title="Mastercard">
             <img src="images/mpesa-logo.svg" alt="Mpesa" title="Mpesa">
-            <img src="images/airtel.svg" alt="Airtel Money" title="Airtel Money">
+            <img src="images/airtel-logo-icon.svg" alt="Airtel Money" title="Airtel Money">
           </div>
           <div class="classic-footer-note">We accept Visa, Mastercard, and major Tanzanian mobile payments.</div>
         </form>
