--- a/northern-circuit.html
+++ b/northern-circuit.html
@@ -3,72 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Northern Circuit Safari | Lenga Safaris</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>northern-circuit</title>
+  <link rel="stylesheet" href="northern-circuit.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="icon" type="image/png" href="images/favicon.ico" />
 </head>
 <body>
   <div class="navbar minimalist-navbar">
-    <a href="index.html" class="navbar-logo" style="display: flex; align-items: center; gap: 8px;">
-      <img src="images/IMG-20241213-WA0304-removebg-preview(1).png" alt="Lenga Safari Logo" style="height: 36px;">
-      <span class="navbar-title">Lenga Safaris</span>
-    </a>
-    <nav class="navbar-links">
-      <a href="index.html#tours"><i class="fa-solid fa-binoculars"></i> Tours</a>
-      <a href="index.html#about"><i class="fa-solid fa-info-circle"></i> About</a>
-      <a href="index.html#gallery"><i class="fa-solid fa-images"></i> Gallery</a>
-      <a href="mailto:info@lengasafaris.com"><i class="fa-solid fa-envelope"></i> Contact Us</a>
-    </nav>
+  <a href="index.html" class="navbar-logo" style="display: flex; align-items: center; gap: 8px;">
+    <img src="images/IMG-20241213-WA0304-removebg-preview(1).png" alt="Lenga Safari Logo" style="height: 36px;">
+    <span class="navbar-title">Lenga Safaris</span>
+  </a>
+  <nav class="navbar-links">
+    <a href="#tours"><i class="fa-solid fa-binoculars"></i> Tours</a>
+    <a href="#about"><i class="fa-solid fa-info-circle"></i> About</a>
+    <a href="#gallery"><i class="fa-solid fa-images"></i> Gallery</a>
+    <a href="mailto:info@lengasafaris.com"><i class="fa-solid fa-envelope"></i> Contact Us</a>
+  </nav>
+</div>
+
+  <header class="hero" style="background-image: url('images/Serengeti.jpg');">
+  <div class="hero-overlay"></div>
+  <div class="hero-text">
+    <h1>Lenga Safaris</h1>
+    <h2>Discover the Wild Heart of <span>Africa</span></h2>
+    <p class="hero-subtitle">Unforgettable journeys. Legendary landscapes. Authentic adventure.</p>
+    <a href="#tours" class="cta">Explore Our Tours</a>
+    <a href="#booking-form" class="cta secondary-cta">Book Now</a>
   </div>
+</header>
+  <section id="about-northern" class="northern-circuit-section">
+    <div class="container">
+      <h2>Discover the Northern Circuit Safari Experience</h2>
+      <p>
+        The <strong>Northern Circuit</strong> is Tanzania’s most celebrated safari route, renowned for its breathtaking landscapes, iconic wildlife encounters, and world-famous national parks. Lenga Safaris invites you to explore this unforgettable journey, where adventure meets nature at its finest.
+      </p>
 
-  <header class="hero" style="background-image: url('images/th-1494847037.jpeg');">
-    <div class="hero-overlay"></div>
-    <div class="hero-text">
-      <h1>Northern Circuit Safari</h1>
-      <h2>Serengeti, Ngorongoro & Tarangire</h2>
-      <p class="hero-subtitle">Explore Tanzania’s most iconic parks with expert guides and unforgettable landscapes.</p>
-      <a href="index.html#booking-form" class="cta">Book This Safari</a>
-      <a href="mailto:info@lengasafaris.com" class="cta secondary-cta">Contact Us</a>
+      <h3>🌍 Key Destinations on the Northern Circuit:</h3>
+
+      <h4>1. Serengeti National Park</h4>
+      <p>
+        Home to the spectacular Great Wildebeest Migration, the Serengeti is a vast savannah teeming with lions, elephants, cheetahs, and countless other species. Experience the true essence of the African wilderness with game drives across the endless plains.
+      </p>
+
+      <h4>2. Ngorongoro Crater</h4>
+      <p>
+        A UNESCO World Heritage Site, the Ngorongoro Crater is the world’s largest unbroken caldera and one of the best places to spot the Big Five. Its lush landscape supports a rich diversity of animals within a dramatic natural amphitheater.
+      </p>
+
+      <h4>3. Lake Manyara National Park</h4>
+      <p>
+        Famous for its tree-climbing lions and pink flamingos, Lake Manyara offers scenic beauty and unique wildlife in a compact area. The park’s forest, lake, and escarpment ecosystem provide a striking contrast to the surrounding savannah.
+      </p>
+
+      <h4>4. Tarangire National Park</h4>
+      <p>
+        Known for its towering baobab trees and large herds of elephants, Tarangire is a hidden gem that offers a more exclusive safari experience. The Tarangire River ensures game viewing is exceptional year-round.
+      </p>
+
+      <h3>🗺️ Sample Itinerary</h3>
+      <ul>
+        <li><strong>Day 1:</strong> Arrival in Arusha – Welcome briefing and overnight stay</li>
+        <li><strong>Day 2:</strong> Tarangire National Park – Game drives and sunset viewing</li>
+        <li><strong>Day 3:</strong> Lake Manyara – Explore the lake and birdlife</li>
+        <li><strong>Day 4-5:</strong> Serengeti National Park – Full-day game drives and wildlife tracking</li>
+        <li><strong>Day 6:</strong> Ngorongoro Crater – Descend into the crater for a final safari experience</li>
+        <li><strong>Day 7:</strong> Return to Arusha – Cultural visit (optional) and departure</li>
+      </ul>
+
+      <h3>🐾 Why Choose Lenga Safaris?</h3>
+      <ul>
+        <li>Experienced, local safari guides with in-depth knowledge</li>
+        <li>Customized itineraries tailored to your preferences</li>
+        <li>Comfortable 4x4 safari vehicles with pop-up roofs</li>
+        <li>Handpicked lodges and camps for all budgets</li>
+        <li>Ethical, sustainable tourism practices</li>
+      </ul>
+
+      <h3>📸 Ready to Begin Your Journey?</h3>
+      <p>
+        Explore the wonders of Tanzania’s Northern Circuit with Lenga Safaris. Whether you're a solo traveler, couple, family, or group, we craft personalized experiences that leave lasting memories.
+      </p>
+
+      <blockquote class="highlight-quote">
+        <strong>Book your Northern Circuit safari today and take the first step toward the adventure of a lifetime!</strong>
+      </blockquote>
+          <a href="#booking-form" class="cta secondary-cta">Book Now</a>
     </div>
-  </header>
-
-  <section class="section">
-    <h2>About the Northern Circuit</h2>
-    <p>
-      The Northern Circuit is Tanzania’s most celebrated safari route, featuring world-famous destinations like Serengeti National Park, Ngorongoro Crater, and Tarangire National Park. Witness the Great Migration, spot the Big Five, and experience breathtaking landscapes.
-    </p>
-    <ul>
-      <li><strong>Serengeti:</strong> Endless plains and the Great Migration</li>
-      <li><strong>Ngorongoro:</strong> The world’s largest intact volcanic caldera</li>
-      <li><strong>Tarangire:</strong> Majestic baobabs and huge elephant herds</li>
-    </ul>
-    <h3>Sample Itinerary</h3>
-    <ol>
-      <li>Day 1: Arrival in Arusha, transfer to Tarangire National Park</li>
-      <li>Day 2: Game drive in Tarangire, overnight at lodge/camp</li>
-      <li>Day 3: Ngorongoro Crater tour</li>
-      <li>Day 4-6: Serengeti safari and migration tracking</li>
-      <li>Day 7: Return to Arusha or Zanzibar extension</li>
-    </ol>
-    <h3>What's Included</h3>
-    <ul>
-      <li>All park fees and permits</li>
-      <li>Professional English-speaking guide</li>
-      <li>Accommodation and meals</li>
-      <li>Private 4x4 safari vehicle</li>
-      <li>Drinking water during safari</li>
-    </ul>
-    <a href="index.html#booking-form" class="cta">Book Now</a>
   </section>
 
-  <section class="section section-image" style="background-image: url('images/DSC_0937.jpg');">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="images/DSC_0937.jpg" alt="Serengeti">
-      <img src="images/DSC_0105.jpg" alt="Ngorongoro">
-      <img src="images/IMG_8494.JPG" alt="Tarangire">
-    </div>
-  </section>
+
 
   <footer class="classic-footer">
     <div class="classic-footer-content">
@@ -86,7 +110,7 @@
         </div>
       </div>
       <div class="classic-footer-col classic-footer-booking">
-        <form class="classic-footer-form" id="booking-form" action="https://formsubmit.co/ericgasper1721@gmail.com" method="POST">
+        <form class="classic-footer-form" id="booking-form" method="POST">
           <input type="text" name="name" placeholder="Name" required>
           <input type="email" name="email" placeholder="Email" required>
           <input type="text" name="phone" placeholder="Phone" required>
@@ -122,5 +146,35 @@
       &copy; 2025 Lenga Safari Adventures. All rights reserved.
     </div>
   </footer>
+
+  <script>
+  // Only add JS if you need AJAX form submission, otherwise remove this block
+  document.addEventListener('DOMContentLoaded', function() {
+    var bookingForm = document.getElementById('booking-form');
+    if (bookingForm) {
+      bookingForm.addEventListener('submit', function(e) {
+        e.preventDefault();
+        const form = e.target;
+        const data = new FormData(form);
+
+        fetch('https://formsubmit.co/ajax/ericgasper1721@gmail.com', {
+          method: 'POST',
+          body: data,
+          headers: {
+            'Accept': 'application/json'
+          }
+        })
+        .then(response => {
+          if (response.ok) {
+            window.location.href = 'index.html'; // Redirect to home page
+          } else {
+            alert('There was an error submitting the form. Please try again.');
+          }
+        })
+        .catch(() => alert('There was an error submitting the form. Please try again.'));
+      });
+    }
+  });
+  </script>
 </body>
 </html>
