Updated safari pages with new content

--- a/amboseli-safari.html
+++ b/amboseli-safari.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Amboseli Safari | Lenga Safaris</title>
+  <title>Kilimanjaro Safari | Lenga Safaris</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -24,7 +24,7 @@
   <header class="hero" style="background-image: url('images/amboseli-national-park-1544135262.jpg');">
     <div class="hero-overlay"></div>
     <div class="hero-text">
-      <h1>Amboseli Safari</h1>
+      <h1>Kilimanjaro Safari</h1>
       <h2>Elephants & Kilimanjaro Views</h2>
       <p class="hero-subtitle">See Africa’s largest elephants with the majestic Mount Kilimanjaro as your backdrop.</p>
       <a href="index.html#booking-form" class="cta">Book This Safari</a>
@@ -71,7 +71,8 @@
             <i class="fa fa-envelope"></i>
             <a href="mailto:info@lengasafaris.com" style="color:inherit;text-decoration:underline;">info@lengasafaris.com</a>
           </span>
-          <span><i class="fa fa-phone"></i> +255 123 456 789</span>
+          <span><i class="fa fa-phone"></i> +255 614 197 177</span>
+          <span><i class="fa fa-phone"></i> +255 748 348 996</span>
         </div>
       </div>
       <div class="classic-footer-col classic-footer-booking">
@@ -103,7 +104,8 @@
         <div class="classic-footer-social-icons">
           <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/lengasafaris/" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="https://wa.me/255123456789" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://wa.me/255614197177" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://wa.me/255748348996" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
     </div>
