--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="card">
         <img src="images/amboseli-national-park-1544135262.jpg" alt="Amboseli Safari">
-        <h3>Amboseli Safari</h3>
+        <h3>Kilimanjaro Safari</h3>
         <p>See elephants with Kilimanjaro in the background. A dream photo safari.</p>
         <a href="amboseli-safari.html" class="cta">See More</a>
       </div>
@@ -311,7 +311,8 @@
           <i class="fa fa-envelope"></i>
           <a href="mailto:info@lengasafaris.com" style="color:inherit;text-decoration:underline;">info@lengasafaris.com</a>
         </span>
-        <span><i class="fa fa-phone"></i> +255 123 456 789</span>
+        <span><i class="fa fa-phone"></i> +255 614 197 177</span>
+        <span><i class="fa fa-phone"></i> +255 748 348 996</span>
       </div>
     </div>
     <div class="classic-footer-col classic-footer-booking">
@@ -343,7 +344,8 @@
       <div class="classic-footer-social-icons">
         <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/lengasafaris/" target="_blank" rel="noopener" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://wa.me/255123456789" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.me/255748348996" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.me/255614197177" target="_blank" rel="noopener" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
       </div>
     </div>
   </div>
