--- a/northern-circuit.html
+++ b/northern-circuit.html
@@ -34,61 +34,61 @@
 </header>
   <section id="about-northern" class="northern-circuit-section">
     <div class="container">
-      <h2>Discover the Northern Circuit Safari Experience</h2>
+      <h2>Experience Tanzania’s Premier Northern Circuit Safari</h2>
       <p>
-        The <strong>Northern Circuit</strong> is Tanzania’s most celebrated safari route, renowned for its breathtaking landscapes, iconic wildlife encounters, and world-famous national parks. Lenga Safaris invites you to explore this unforgettable journey, where adventure meets nature at its finest.
+        Embark on an extraordinary journey through Tanzania’s renowned <strong>Northern Circuit</strong>—a region celebrated for its breathtaking scenery, iconic wildlife, and legendary national parks. With Lenga Safaris, discover the perfect blend of adventure, comfort, and authentic African wilderness.
       </p>
 
-      <h3>🌍 Key Destinations on the Northern Circuit:</h3>
+      <h3>🌍 Featured Destinations</h3>
 
-      <h4>1. Serengeti National Park</h4>
+      <h4>Serengeti National Park</h4>
       <p>
-        Home to the spectacular Great Wildebeest Migration, the Serengeti is a vast savannah teeming with lions, elephants, cheetahs, and countless other species. Experience the true essence of the African wilderness with game drives across the endless plains.
+        Witness the awe-inspiring Great Wildebeest Migration and explore endless savannahs teeming with lions, elephants, cheetahs, and more. The Serengeti offers unrivaled game drives and a true immersion into Africa’s wild heart.
       </p>
 
-      <h4>2. Ngorongoro Crater</h4>
+      <h4>Ngorongoro Crater</h4>
       <p>
-        A UNESCO World Heritage Site, the Ngorongoro Crater is the world’s largest unbroken caldera and one of the best places to spot the Big Five. Its lush landscape supports a rich diversity of animals within a dramatic natural amphitheater.
+        Explore the world’s largest unbroken caldera—a UNESCO World Heritage Site and a haven for the Big Five. The crater’s lush landscapes and dramatic vistas create a unique natural amphitheater for unforgettable wildlife encounters.
       </p>
 
-      <h4>3. Lake Manyara National Park</h4>
+      <h4>Lake Manyara National Park</h4>
       <p>
-        Famous for its tree-climbing lions and pink flamingos, Lake Manyara offers scenic beauty and unique wildlife in a compact area. The park’s forest, lake, and escarpment ecosystem provide a striking contrast to the surrounding savannah.
+        Discover tree-climbing lions, vibrant flocks of flamingos, and diverse habitats ranging from forests to lakeshores. Lake Manyara’s compact beauty and rich biodiversity make every moment memorable.
       </p>
 
-      <h4>4. Tarangire National Park</h4>
+      <h4>Tarangire National Park</h4>
       <p>
-        Known for its towering baobab trees and large herds of elephants, Tarangire is a hidden gem that offers a more exclusive safari experience. The Tarangire River ensures game viewing is exceptional year-round.
+        Enjoy exclusive safari experiences among ancient baobab trees and vast herds of elephants. The perennial Tarangire River attracts wildlife year-round, ensuring exceptional game viewing in a tranquil setting.
       </p>
 
       <h3>🗺️ Sample Itinerary</h3>
       <ul>
-        <li><strong>Day 1:</strong> Arrival in Arusha – Welcome briefing and overnight stay</li>
-        <li><strong>Day 2:</strong> Tarangire National Park – Game drives and sunset viewing</li>
-        <li><strong>Day 3:</strong> Lake Manyara – Explore the lake and birdlife</li>
-        <li><strong>Day 4-5:</strong> Serengeti National Park – Full-day game drives and wildlife tracking</li>
-        <li><strong>Day 6:</strong> Ngorongoro Crater – Descend into the crater for a final safari experience</li>
-        <li><strong>Day 7:</strong> Return to Arusha – Cultural visit (optional) and departure</li>
+        <li><strong>Day 1:</strong> Arrive in Arusha – Welcome briefing and overnight stay</li>
+        <li><strong>Day 2:</strong> Tarangire National Park – Game drives and sunset vistas</li>
+        <li><strong>Day 3:</strong> Lake Manyara – Explore lakeside wildlife and birdlife</li>
+        <li><strong>Days 4–5:</strong> Serengeti National Park – Full-day game drives and wildlife tracking</li>
+        <li><strong>Day 6:</strong> Ngorongoro Crater – Descend for a final safari adventure</li>
+        <li><strong>Day 7:</strong> Return to Arusha – Optional cultural tour and departure</li>
       </ul>
 
-      <h3>🐾 Why Choose Lenga Safaris?</h3>
+      <h3>🐾 Why Travel with Lenga Safaris?</h3>
       <ul>
-        <li>Experienced, local safari guides with in-depth knowledge</li>
-        <li>Customized itineraries tailored to your preferences</li>
-        <li>Comfortable 4x4 safari vehicles with pop-up roofs</li>
-        <li>Handpicked lodges and camps for all budgets</li>
-        <li>Ethical, sustainable tourism practices</li>
+        <li>Expert local guides with deep regional knowledge</li>
+        <li>Personalized itineraries tailored to your interests</li>
+        <li>Modern 4x4 safari vehicles with pop-up roofs for optimal viewing</li>
+        <li>Handpicked lodges and camps to suit every budget</li>
+        <li>Commitment to ethical and sustainable tourism</li>
       </ul>
 
-      <h3>📸 Ready to Begin Your Journey?</h3>
+      <h3>📸 Start Your Adventure Today</h3>
       <p>
-        Explore the wonders of Tanzania’s Northern Circuit with Lenga Safaris. Whether you're a solo traveler, couple, family, or group, we craft personalized experiences that leave lasting memories.
+        Discover Tanzania’s Northern Circuit with Lenga Safaris. Whether you’re traveling solo, as a couple, with family, or in a group, we create bespoke safari experiences that deliver lifelong memories.
       </p>
 
       <blockquote class="highlight-quote">
-        <strong>Book your Northern Circuit safari today and take the first step toward the adventure of a lifetime!</strong>
+        <strong>Reserve your Northern Circuit safari now and begin your journey to Africa’s most iconic destinations!</strong>
       </blockquote>
-          <a href="#booking-form" class="cta secondary-cta">Book Now</a>
+      <a href="#booking-form" class="cta secondary-cta">Book Now</a>
     </div>
   </section>
 
