--- a/northern-circuit.html
+++ b/northern-circuit.html
@@ -15,11 +15,11 @@
     <span class="navbar-title">Lenga Safaris</span>
   </a>
   <nav class="navbar-links">
-    <a href="#tours"><i class="fa-solid fa-binoculars"></i> Tours</a>
-    <a href="#about"><i class="fa-solid fa-info-circle"></i> About</a>
-    <a href="#gallery"><i class="fa-solid fa-images"></i> Gallery</a>
-    <a href="mailto:info@lengasafaris.com"><i class="fa-solid fa-envelope"></i> Contact Us</a>
-  </nav>
+      <a href="index.html#tours"><i class="fa-solid fa-binoculars"></i> Tours</a>
+      <a href="index.html#about"><i class="fa-solid fa-info-circle"></i> About</a>
+      <a href="index.html#gallery"><i class="fa-solid fa-images"></i> Gallery</a>
+      <a href="mailto:info@lengasafaris.com"><i class="fa-solid fa-envelope"></i> Contact Us</a>
+    </nav>
 </div>
 
   <header class="hero" style="background-image: url('images/Serengeti.jpg');">
@@ -32,7 +32,7 @@
     <a href="#booking-form" class="cta secondary-cta">Book Now</a>
   </div>
 </header>
-  <section id="about-northern" class="northern-circuit-section">
+  <section id="about-northern" class="northern-circuit-section reveal-on-scroll">
     <div class="container">
       <h2>Experience Tanzania’s Premier Northern Circuit Safari</h2>
       <p>
@@ -40,45 +40,95 @@
       </p>
 
       <h3>🌍 Featured Destinations</h3>
-
-      <h4>Serengeti National Park</h4>
-      <p>
-        Witness the awe-inspiring Great Wildebeest Migration and explore endless savannahs teeming with lions, elephants, cheetahs, and more. The Serengeti offers unrivaled game drives and a true immersion into Africa’s wild heart.
-      </p>
-
-      <h4>Ngorongoro Crater</h4>
-      <p>
-        Explore the world’s largest unbroken caldera—a UNESCO World Heritage Site and a haven for the Big Five. The crater’s lush landscapes and dramatic vistas create a unique natural amphitheater for unforgettable wildlife encounters.
-      </p>
-
-      <h4>Lake Manyara National Park</h4>
-      <p>
-        Discover tree-climbing lions, vibrant flocks of flamingos, and diverse habitats ranging from forests to lakeshores. Lake Manyara’s compact beauty and rich biodiversity make every moment memorable.
-      </p>
-
-      <h4>Tarangire National Park</h4>
-      <p>
-        Enjoy exclusive safari experiences among ancient baobab trees and vast herds of elephants. The perennial Tarangire River attracts wildlife year-round, ensuring exceptional game viewing in a tranquil setting.
-      </p>
+      <div class="destinations-grid">
+        <div class="destination-card">
+          <h4>Serengeti National Park</h4>
+          <p>
+            Witness the awe-inspiring Great Wildebeest Migration and explore endless savannahs teeming with lions, elephants, cheetahs, and more. The Serengeti offers unrivaled game drives and a true immersion into Africa’s wild heart.
+          </p>
+        </div>
+        <div class="destination-card">
+          <h4>Ngorongoro Crater</h4>
+          <p>
+            Explore the world’s largest unbroken caldera—a UNESCO World Heritage Site and a haven for the Big Five. The crater’s lush landscapes and dramatic vistas create a unique natural amphitheater for unforgettable wildlife encounters.
+          </p>
+        </div>
+        <div class="destination-card">
+          <h4>Lake Manyara National Park</h4>
+          <p>
+            Discover tree-climbing lions, vibrant flocks of flamingos, and diverse habitats ranging from forests to lakeshores. Lake Manyara’s compact beauty and rich biodiversity make every moment memorable.
+          </p>
+        </div>
+        <div class="destination-card">
+          <h4>Tarangire National Park</h4>
+          <p>
+            Enjoy exclusive safari experiences among ancient baobab trees and vast herds of elephants. The perennial Tarangire River attracts wildlife year-round, ensuring exceptional game viewing in a tranquil setting.
+          </p>
+        </div>
+      <div class="destination-card">
+        <h4>Arusha National Park</h4>
+          <p>
+            Just a short drive from Arusha town, this park offers stunning scenery with Mount Meru as its backdrop. Explore lush forests, crater lakes, and open savannahs. It’s home to giraffes, buffaloes, flamingos, and colobus monkeys, making it an ideal introduction to Tanzania’s wildlife.
+          </p>
+        </div>
+        <div class="destination-card">
+        <h4>Mount Kilimanjaro National Park</h4>
+          <p>
+           Home to Africa’s highest peak, Mount Kilimanjaro, this UNESCO World Heritage Site combines adventure and natural beauty. While climbers ascend to its snow-capped summit, safari enthusiasts can enjoy the lower slopes’ unique ecosystems, where elephants, leopards, and diverse birdlife thrive.
+        </div>
+      </div>
 
       <h3>🗺️ Sample Itinerary</h3>
-      <ul>
-        <li><strong>Day 1:</strong> Arrive in Arusha – Welcome briefing and overnight stay</li>
-        <li><strong>Day 2:</strong> Tarangire National Park – Game drives and sunset vistas</li>
-        <li><strong>Day 3:</strong> Lake Manyara – Explore lakeside wildlife and birdlife</li>
-        <li><strong>Days 4–5:</strong> Serengeti National Park – Full-day game drives and wildlife tracking</li>
-        <li><strong>Day 6:</strong> Ngorongoro Crater – Descend for a final safari adventure</li>
-        <li><strong>Day 7:</strong> Return to Arusha – Optional cultural tour and departure</li>
-      </ul>
+      <div class="itinerary-timeline">
+        <div class="timeline-item">
+          <span class="timeline-day">Day 1</span>
+          <div class="timeline-desc">Arrive in Arusha – Welcome briefing and overnight stay</div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-day">Day 2</span>
+          <div class="timeline-desc">Tarangire National Park – Game drives and sunset vistas</div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-day">Day 3</span>
+          <div class="timeline-desc">Lake Manyara – Explore lakeside wildlife and birdlife</div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-day">Days 4–5</span>
+          <div class="timeline-desc">Serengeti National Park – Full-day game drives and wildlife tracking</div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-day">Day 6</span>
+          <div class="timeline-desc">Ngorongoro Crater – Descend for a final safari adventure</div>
+        </div>
+        <div class="timeline-item">
+          <span class="timeline-day">Day 7</span>
+          <div class="timeline-desc">Return to Arusha – Optional cultural tour and departure</div>
+        </div>
+      </div>
 
       <h3>🐾 Why Travel with Lenga Safaris?</h3>
-      <ul>
-        <li>Expert local guides with deep regional knowledge</li>
-        <li>Personalized itineraries tailored to your interests</li>
-        <li>Modern 4x4 safari vehicles with pop-up roofs for optimal viewing</li>
-        <li>Handpicked lodges and camps to suit every budget</li>
-        <li>Commitment to ethical and sustainable tourism</li>
-      </ul>
+      <div class="benefits-cards">
+        <div class="benefit-card">
+          <i class="fa-solid fa-user-tie"></i>
+          <span>Expert local guides with deep regional knowledge</span>
+        </div>
+        <div class="benefit-card">
+          <i class="fa-solid fa-map"></i>
+          <span>Personalized itineraries tailored to your interests</span>
+        </div>
+        <div class="benefit-card">
+          <i class="fa-solid fa-car"></i>
+          <span>Modern 4x4 safari vehicles with pop-up roofs for optimal viewing</span>
+        </div>
+        <div class="benefit-card">
+          <i class="fa-solid fa-hotel"></i>
+          <span>Handpicked lodges and camps to suit every budget</span>
+        </div>
+        <div class="benefit-card">
+          <i class="fa-solid fa-leaf"></i>
+          <span>Commitment to ethical and sustainable tourism</span>
+        </div>
+      </div>
 
       <h3>📸 Start Your Adventure Today</h3>
       <p>
@@ -178,5 +228,20 @@
     }
   });
   </script>
+  <script>
+document.addEventListener('DOMContentLoaded', function() {
+  function revealOnScroll() {
+    document.querySelectorAll('.reveal-on-scroll').forEach(function(el) {
+      const rect = el.getBoundingClientRect();
+      // Show as soon as the top of the element enters the viewport
+      if (rect.top < window.innerHeight) {
+        el.classList.add('visible');
+      }
+    });
+  }
+  window.addEventListener('scroll', revealOnScroll);
+  revealOnScroll();
+});
+</script>
 </body>
 </html>
