--- a/wildebeest-migration.html
+++ b/wildebeest-migration.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wildebeest Migration | Lenga Safaris</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="wildebeest-migration.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
@@ -32,25 +33,6 @@
     </div>
   </header>
 
-  <section class="section">
-    <h2>About the Wildebeest Migration</h2>
-    <p>
-      The annual Wildebeest Migration is one of nature’s most awe-inspiring events. Experience dramatic river crossings, predator action, and the endless plains of the Serengeti.
-    </p>
-    <ul>
-      <li><strong>Best Time:</strong> June to October (river crossings), December to March (calving season)</li>
-      <li><strong>Highlights:</strong> Mara River crossings, big cats, and vast herds</li>
-    </ul>
-    <h3>Sample Itinerary</h3>
-    <ol>
-      <li>Day 1: Arrival in Arusha, transfer to Serengeti</li>
-      <li>Day 2-5: Full-day game drives tracking the migration</li>
-      <li>Day 6: Ngorongoro Crater tour</li>
-      <li>Day 7: Return to Arusha or Zanzibar extension</li>
-    </ol>
-    <a href="index.html#booking-form" class="cta">Book Now</a>
-  </section>
-
   <section class="section section-image" style="background-image: url('images/DSC_0978.jpg');">
     <h2>Gallery</h2>
     <div class="gallery-grid">
@@ -59,6 +41,95 @@
       <img src="images/IMG_8494.JPG" alt="Safari">
     </div>
   </section>
+<section id="wildebeest-migration" class="wildebeest-section reveal-on-scroll">
+  <div class="container">
+    <h2>🐾 Wildebeest Migration – The Greatest Show on Earth</h2>
+    <p>
+      Witness one of the most spectacular wildlife events on the planet as millions of wildebeest, zebras, and gazelles journey across the Serengeti and into Kenya’s Maasai Mara. Often called <strong>"The Greatest Show on Earth"</strong>, this annual migration is a breathtaking display of nature, survival, and Africa’s raw beauty.
+    </p>
+
+    <h3>🌟 Highlights of the Migration</h3>
+    <ul class="highlights-list">
+      <li><strong>River Crossings:</strong> Watch vast herds brave crocodile-infested rivers, creating dramatic and unforgettable scenes.</li>
+      <li><strong>Predator Encounters:</strong> Lions, leopards, hyenas, and cheetahs follow the herds, offering unique insights into Africa’s predator-prey dynamics.</li>
+      <li><strong>Calving Season:</strong> January–March is calving season in the southern Serengeti, attracting predators and incredible photo opportunities.</li>
+      <li><strong>Endless Plains:</strong> See seemingly infinite herds sweeping across the golden savannah, moving in rhythm with nature’s calendar.</li>
+    </ul>
+
+    <h3>🗓️ Best Time to Witness</h3>
+    <div class="best-time-grid">
+      <div class="time-card">
+        <h4>January – March</h4>
+        <p>Calving season in the southern Serengeti</p>
+      </div>
+      <div class="time-card">
+        <h4>June – July</h4>
+        <p>Dramatic river crossings in northern Serengeti</p>
+      </div>
+      <div class="time-card">
+        <h4>October – November</h4>
+        <p>Herds return south to the Serengeti</p>
+      </div>
+    </div>
+
+    <h3>🗺️ Sample Itinerary</h3>
+    <div class="itinerary-timeline">
+      <div class="timeline-item">
+        <span class="timeline-day">Day 1</span>
+        <div class="timeline-desc">Arrive in Arusha – Welcome briefing and overnight stay</div>
+      </div>
+      <div class="timeline-item">
+        <span class="timeline-day">Day 2</span>
+        <div class="timeline-desc">Tarangire National Park – Game drives and sunset vistas</div>
+      </div>
+      <div class="timeline-item">
+        <span class="timeline-day">Day 3</span>
+        <div class="timeline-desc">Lake Manyara – Explore lakeside wildlife and birdlife</div>
+      </div>
+      <div class="timeline-item">
+        <span class="timeline-day">Days 4–5</span>
+        <div class="timeline-desc">Serengeti National Park – Witness migration crossings and full-day game drives</div>
+      </div>
+      <div class="timeline-item">
+        <span class="timeline-day">Day 6</span>
+        <div class="timeline-desc">Ngorongoro Crater – Descend for a final safari adventure</div>
+      </div>
+      <div class="timeline-item">
+        <span class="timeline-day">Day 7</span>
+        <div class="timeline-desc">Return to Arusha – Optional cultural tour and departure</div>
+      </div>
+    </div>
+
+    <h3>🌟 Why Choose Lenga Safaris?</h3>
+    <div class="benefits-cards">
+      <div class="benefit-card">
+        <i class="fa-solid fa-user-tie"></i>
+        <span>Expert local guides with deep regional knowledge</span>
+      </div>
+      <div class="benefit-card">
+        <i class="fa-solid fa-map"></i>
+        <span>Personalized itineraries tailored to your interests</span>
+      </div>
+      <div class="benefit-card">
+        <i class="fa-solid fa-car"></i>
+        <span>Modern 4x4 safari vehicles with pop-up roofs for optimal viewing</span>
+      </div>
+      <div class="benefit-card">
+        <i class="fa-solid fa-hotel"></i>
+        <span>Handpicked lodges and camps to suit every budget</span>
+      </div>
+      <div class="benefit-card">
+        <i class="fa-solid fa-leaf"></i>
+        <span>Commitment to ethical and sustainable tourism</span>
+      </div>
+    </div>
+
+    <blockquote class="highlight-quote">
+      <strong>Reserve your Wildebeest Migration safari now and witness Africa’s most iconic wildlife spectacle!</strong>
+    </blockquote>
+    <a href="#booking-form" class="cta secondary-cta">Book Now</a>
+  </div>
+</section>
 
   <footer class="classic-footer">
     <div class="classic-footer-content">
@@ -136,6 +207,19 @@ document.getElementById('booking-form').addEventListener('submit', function(e) {
     }
   })
   .catch(() => alert('There was an error submitting the form. Please try again.'));
+});
+
+document.addEventListener('DOMContentLoaded', function() {
+  function revealOnScroll() {
+    document.querySelectorAll('.reveal-on-scroll').forEach(function(el) {
+      const rect = el.getBoundingClientRect();
+      if (rect.top < window.innerHeight) {
+        el.classList.add('visible');
+      }
+    });
+  }
+  window.addEventListener('scroll', revealOnScroll);
+  revealOnScroll();
 });
 </script>
 </body>
