--- a/wildebeest-migration.html
+++ b/wildebeest-migration.html
@@ -6,6 +6,7 @@
   <title>Wildebeest Migration | Lenga Safaris</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="wildebeest-migration.css" />
+  <link rel="icon" type="image/png" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
