--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lenga Safari Adventures</title>
+  <meta name="description" content="Lenga Safaris offers unforgettable African safari adventures in Tanzania, including Serengeti, Ngorongoro, Kilimanjaro, and the Wildebeest Migration. Discover wildlife, landscapes, and culture with expert guides." />
+  <meta name="keywords" content="African safari, Tanzania safari, Serengeti, Ngorongoro, Kilimanjaro, Wildebeest Migration, Zanzibar, safari tours, wildlife, adventure travel, East Africa, Lenga Safaris" />
+  <meta name="author" content="Lenga Safaris" />
+  <meta property="og:title" content="Lenga Safari Adventures - Tanzania & African Safaris" />
+  <meta property="og:description" content="Experience the best African safaris with Lenga Safaris. Explore Tanzania's top destinations: Serengeti, Ngorongoro, Kilimanjaro, and more." />
+  <meta property="og:image" content="https://yourdomain.com/images/Serengeti.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Lenga Safari Adventures - Tanzania & African Safaris" />
+  <meta name="twitter:description" content="Book your African safari with Lenga Safaris. Discover Tanzania's wildlife, landscapes, and culture." />
+  <meta name="twitter:image" content="https://yourdomain.com/images/Serengeti.jpg" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="icon" type="image/png" href="images/favicon.ico" />
