Updated safari pages with new content

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <meta name="author" content="Lenga Safaris" />
   <meta property="og:title" content="Lenga Safari Adventures - Tanzania & African Safaris" />
   <meta property="og:description" content="Experience the best African safaris with Lenga Safaris. Explore Tanzania's top destinations: Serengeti, Ngorongoro, Kilimanjaro, and more." />
-  <meta property="og:image" content="https://yourdomain.com/images/Serengeti.jpg" />
+  <meta property="og:image" content="https://lenga-safaris.vercel.app/index.html" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:url" content="https://lenga-safaris.vercel.app/index.html/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Lenga Safari Adventures - Tanzania & African Safaris" />
   <meta name="twitter:description" content="Book your African safari with Lenga Safaris. Discover Tanzania's wildlife, landscapes, and culture." />
-  <meta name="twitter:image" content="https://yourdomain.com/images/Serengeti.jpg" />
+  <meta name="twitter:image" content="https://lenga-safaris.vercel.app/index.html" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="icon" type="image/png" href="images/favicon.ico" />
